# ell

./: .buildinfo  .dockerignore  .gitignore  CNAME  Dockerfile.api  Dockerfile.studio  LICENSE  Makefile  README.md  __testing__.py  build.py  build_hook.py  docker-compose.yml  genindex.html  getting_started.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py  tailwind.config.js
.github/workflows/: docs.yml  pr_typescript.yml  pytest.yml
_sources/: getting_started.rst.txt  index.rst.txt  installation.rst.txt
_sources/advanced_features/: multimodal_inputs.rst.txt
_sources/core_concepts/: configuration.rst.txt  ell_complex.rst.txt  ell_simple.rst.txt  ell_studio.rst.txt  index.rst.txt  message_api.rst.txt  models_and_api_clients.rst.txt  structured_outputs.rst.txt  tool_usage.rst.txt  versioning_and_storage.rst.txt
_sources/reference/: index.rst.txt
_static/: awesome-docsearch.css  awesome-sphinx-design.css  pygments.css  theme.css  theme.js
advanced_features/: multimodal_inputs.html
best_practices/: designing_effective_lmps.html
core_concepts/: configuration.html  decorators.html  ell_complex.html  ell_simple.html  ell_studio.html  evaluations.html  index.html  language_model_programs.html  message_api.html  messages_and_content_blocks.html  models_and_api_clients.html  multimodality.html  structured_outputs.html  tool_usage.html  tools.html  versioning_and_storage.html
docker/: Dockerfile.api  Dockerfile.studio  docker-compose.yml
docs/: Makefile  client.md  conf.py  docstodos.txt  index.rst  make.bat  package-lock.json  package.json  principles.md  requirements.txt  todo.md
docs/ramblings/: # what happemns duiring losure.py  announcement  client.md  docstodos.txt  dspy.md  eval_db_schema.md  evalandmetrics.md  evalspec.md  gvar.ipynb  humanfeedback.py  misc.md  notes_on_adapters.py  notes_on_dspy2.py  notes_on_tracing.md  parsing_example.py  principles.md  providers.py  resposne_formats.md  serialization.md  spec_notes.md  test.py  thoughtsonevals.md  typeddictpartial.py  yield_ell.py
docs/reference/: ell.lmp.rst  ell.models.rst  ell.stores.rst  ell.types.rst  ell.util.rst  index.rst
docs/src/: audio_transcript.txt  conf.py  getting_started.rst  index.rst  installation.rst  parse_typescript.js  sphinx_typescript_automodule.py
ell/: pyproject.toml
ell-studio/: .env.development  .env.production  jsconfig.json  package-lock.json  package.json  tailwind.config.js
ell-studio/public/: index.html
ell-studio/src/: App.js  index.css
ell/src/ell/: __init__.py  configurator.py  decorators.py  lstr.py  serializer.py  store.py  types.py
ell/src/ell/models/: __init__.py  openai.py
ell/src/ell/serializers/: filesystem.py
ell/src/ell/stores/: jsonl.py  sql.py
ell/src/ell/studio/: __main__.py  data_server.py
ell/src/ell/util/: closure.py  differ.py
ell/tests/: test_lstr.py
ell2a-studio/: README.md  jsconfig.json  package-lock.json  package.json  tailwind.config.js
ell2a-studio/public/: index.html
ell2a-studio/src/: App.js  index.css  index.js  reportWebVitals.js  setupTests.js
examples/: .gitignore  atomic.py  bedrock.py  bedrock_hello.py  bv.py  cache_example.py  calculator.py  calculator_structured.py  chatbot.py  chord_progression.mid  chord_progression_writer.py  claude.py  client_example.py  cohere_hello.py  deep_tree.py  diamond_depencies.py  emailai.py  eval.py  git_issue.py  groq_example.py  hello_postgres.py  hello_world.py  interactive_tool_diff.py  iteration_0  joke.py  langchain.py  lexical_closure_example.py  llm_lottery.py  multilmp.py  notebook.ipynb  o1.py  ollama_example.py  openai_audio.py  openai_prompt_caching.py  openrouter_example.py  output_freezing.py  output_freezing.py.old  poemeval.py  quick_chat.py  rag.py  (+8 more)
examples/evals/: classification.py  poems.py  psolve.py  summaries.py  vibes.py
examples/exa/: README.md  exa.py
examples/future/: agent_using_chatbot.py  http_serializer.py  image.py  images_minio.py  json_mode.py  knowledge_graph.py  limbo.py  meme_maker.py  multimodal_agent_use.py  multimodal_tool_use.py  o1_graph.py  openaigym.py  parallel_agent_calls.py  parallel_tool_calls.py  realtimewebcam.py  structured.py  tool_using_chatbot.py  tools.py  use_agent_once.py  use_tool_once.py  weather_example.py  webcam_activity_describer.py
examples/providers/: anthropic_ex.py  azure_ex.py  gemini_ex.py  groq_ex.py  instructor_ex.py  local_ex.py  ollama_ex.py  openai_ex.py  openrouter_ex.py  vllm_ex.py  xai_ex.py
examples/rag/: rag.py  wikipedia_mini_rag.py
getting_started/: basic_usage.html  configuration.html  index.html
reference/: index.html
src/ell/: __init__.py  __version__.py  _lstr.py  api.py  caching.py  configurator.py  ctxt.py  decorators.py  evaluation.py  lstr.py  provider.py  sqlmodels.py  store.py  types.py
src/ell2a/: __init__.py  __version__.py  configurator.py  provider.py  store.py
tests/: .exampleignore  conftest.py  run_all_examples.py  test_autocommit_model.py  test_aws_bedrock.py  test_bedrock_provider.py  test_closure.py  test_cohere_provider.py  test_dict_sync_meta.py  test_evaluation.py  test_groq_provider.py  test_lmp_to_prompt.py  test_lstr.py  test_message_type.py  test_migrations.py  test_openai_provider.py  test_openrouter_provider.py  test_provider_override.py  test_results.py  test_should_import.py  test_sql_store.py  test_tool_call_serialization.py  test_tools.py  test_track.py
tests/api/: test_api.py
typescript/: .mocharc.json  .npmignore  .prettierrc  README.md  _logger.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.mts
typescript/examples/: example-child.ts  example.ts  (+5 more)
x/: README.md
x/openai_realtime/: .gitignore  LICENSE  README.md  pyproject.toml
x/openai_realtime/examples/: audio_example.py  chat_assistant_clone.py  discord_gpt4o.py  run_bot.py
x/openai_realtime/src/openai_realtime/: __init__.py  api.py  client.py  conversation.py  event_handler.py  utils.py
x/openai_realtime/tests/: test_audio.py  test_mock.py
(+422 files in other folders)
