[tool.poetry]
name = "openai-realtime"
version = "0.0.1"
description = "A real-time API client for OpenAI using websockets"
authors = ["Xingqiang Chen"]
license = "MIT"
readme = "README.md"
packages = [{include = "openai_realtime", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"  # Updated to match your Python version
websockets = "^10.4"
aiohttp = "^3.8.4"
asyncio = "^3.4.3"
pydub = "^0.25.1"  # Note: This package has a deprecation warning for Python 3.13+

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"  # Added pytest-asyncio
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']  # Updated to Python 3.12

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"  # Added configuration for pytest-asyncio
